--- a/package.json
+++ b/package.json
@@ -1,5 +1,24 @@
 {
-  "dependencies": {
-    "tsup": "^8.1.1"
+  "name": "verda-design-tokens",
+  "version": "1.0.0",
+  "description": "",
+  "homepage": "https://github.com/domagojkuzmek/vds-tokens-package#readme",
+  "bugs": {
+    "url": "https://github.com/domagojkuzmek/vds-tokens-package/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/domagojkuzmek/vds-tokens-package.git"
+  },
+  "license": "ISC",
+  "author": "Domagoj Kuzmek",
+  "type": "commonjs",
+  "main": "build.js",
+  "scripts": {
+    "build": "style-dictionary build"
+  },
+  "devDependencies": {
+    "sass": "^1.93.2",
+    "style-dictionary": "^5.1.1"
   }
 }
