Minor version 1.1.0. #Add: scss tokens and js tokens

--- a/config.json
+++ b/config.json
@@ -10,6 +10,16 @@
           "format": "scss/variables"
         }
       ]
+    },
+    "js": {
+      "transformGroup": "js",
+      "buildPath": "build/",
+      "files": [
+        {
+          "destination": "tokens.js",
+          "format": "javascript/es6"
+        }
+      ]
     }
   }
 }
